--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "lk-test",
-  "main": "lib.js",
+  "main": "dist/lk-test.cjs.js",
+  "module": "dist/lk-test.esm.js",
   "bin": {
-    "lk-test": "run.js"
+    "lk-test": "src"
   },
   "dependencies": {
-    "cli-color": "^1.4.0",
-    "esm": "^3.2.22",
-    "glob": "^7.1.4"
+    "colors-cli": "^1.0.23"
   },
   "devDependencies": {
-    "chai": "^4.2.0"
+    "esm": "^3.2.25",
+    "rollup": "^1.13.1",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-node-resolve": "^5.0.1"
   },
   "version": "1.3.2",
   "description": "An alarmingly simple test running.",
-  "scripts": {
-    "test": "node run"
-  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/lukekaalim/lk-test.git"
