--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "lk-test",
-  "main": "dist/lk-test.cjs.js",
-  "module": "dist/lk-test.esm.js",
+  "name": "@lukekaalim/test",
+  "main": "src/index.js",
   "dependencies": {
     "tiny-ansi-colors": "0.0.4"
   },
   "scripts": {
     "test": "node test.js"
   },
-  "devDependencies": {
-    "rollup": "^1.13.1",
-    "rollup-plugin-cleanup": "^3.1.1",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-flow-entry": "^0.3.1",
-    "rollup-plugin-node-resolve": "^5.0.1"
-  },
   "version": "3.3.0",
-  "description": "An alarmingly simple test running.",
+  "description": "An alarmingly simple test tool",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/lukekaalim/lk-test.git"
@@ -25,7 +17,7 @@
     "test",
     "node"
   ],
-  "author": "luke kaalim",
+  "author": "luke kaalim (luke@kaal.im)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/lukekaalim/lk-test/issues"
