--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,11 +43,11 @@ workflows:
   version: 2
   on-commit:
     jobs:
-      - test
+      - test:
   on-version:
     job:
-      - test
-      - deploy
+      - test:
+      - deploy:
         requires:
           - test
         filters:
