--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ workflows:
           requires:
             - test
           filters:
-            branch:
+            branches:
               only: master
             tags:
               only: /^v.*/
