--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,6 @@ workflows:
             - test
           filters:
             branches:
-              only: master
+              ignore: /.*/
             tags:
               only: /^v.*/
