--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "node test.js",
     "preversion": "npm test",
-    "postversion": "git push --follow tags"
+    "postversion": "git push --follow-tags"
   },
   "version": "4.5.1",
   "description": "An alarmingly simple test tool",
