--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@lukekaalim/test",
   "main": "src/index.js",
+  "types": "src/index.d.ts",
   "scripts": {
     "test": "node test.js",
     "preversion": "npm test",
